# [Unreleased]
  - Raise DecodingError and EncodingError for invalid strings

# 1.7.2
  - Fix typespec of enum encode function (thanks to https://github.com/wingyplus)

# 1.7.1
  - Fix decoding and encoding of proto3 optional fields

# 1.7.0
  - Add support of FileOptions (which can be access with `Msg.file_options/0`)

# 1.6.10
  - Fix format of generated files

# 1.6.9
  - Fix deprecation warnings in Elixir >= 1.14 about Bitwise (thanks to https://github.com/moogle19)

# 1.6.8
  - Raise clearer error message if protoc is missing (thanks to https://github.com/josevalim)

# 1.6.7
  - New release to publish docs using the improved ex_doc 0.27

# 1.6.6
  - Fix JSON conformance tests related to fractional part in Timestamp
  - Add an option to not generate deprecated functions `defs/0` and `defs_by_name/0`

# 1.6.5
  - Elixir 1.9 is now the minimal supported version
  - Relax constraint on Decimal version (thanks to https://github.com/ananthakumaran)

# 1.6.4
  - Renamed module Protox.Message into Protox.MergeMessage to reflect its real role
  - Fix inconsistent behavior when encoding to JSON an enum with an unknown atom field
    ⚠️ Requires to regenerate code from .proto definitions

# 1.6.3
  - Fix typespec of message's json_decode! function

# 1.6.2
  - Fix possible double compilation of Empty well-known type
  - Fix dependency on protoc for generated code

# 1.6.1
  - Fix compilation when protoc does not include well-known types

# 1.6.0
  - Add support of JSON protobuf encoding and decoding (https://developers.google.com/protocol-buffers/docs/proto3#json), with support of well-known types (except for Any)
  - More accurate error reporting
  - Fix decoding of fixed32 and fixed64 values (detected using JSON conformance tests)
  - Deprecate Protox.Encode.encode/1 and Protox.Encode.encode!/1; use Protox.encode/1 and Protox.encode!/1 instead
  - Deprecate generated defs()/0 and defs_by_name()/0