@@ -1,5 +1,6 @@
 # [Unreleased]
   - Raise DecodingError and EncodingError for invalid strings
+  - :binary.copy/1 decoded strings and binaries by default
 
 # 1.7.2
   - Fix typespec of enum encode function (thanks to https://github.com/wingyplus)
